fixed issue with completed projects not showing on desktop mode and change project button layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,8 @@
     --box-shadow:#7ec8e388;
 }
 
+
+
 p, h1, h2 {
     color: var(--text-color);
 }
@@ -98,21 +100,21 @@ h1 {
 
 .project-card-btn {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 0.5rem;
+    width: 100%;
     margin-top: 1rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 
 }
 
 .project-card-btn button {
-    display: flex;
-flex: 1;
-padding: 1.5rem;
-border-radius: 6px;
-border: none;
-background-color: var(--nav-background);
-color: var(--text-color);
+    flex: 0;
+    padding: 0.5rem 1rem;
+    border-radius: 6px;
+    border: none;
+    background-color: var(--nav-background);
+    color: var(--text-color);
 }
 
 .project-card-btn button:hover {
@@ -231,7 +233,8 @@ background-color: var(--nav-background);
 height: 100vh;
 }
 
-#project-list, #complete-project-list {
+#project-list, #project-list-mobile,
+ #complete-project-list, #complete-project-list-mobile {
     display: flex;
     flex-direction: column;
     max-height: 0;
@@ -248,7 +251,12 @@ height: 100vh;
 
 }
 
-#project-list.show, #complete-project-list.show {
+.hidden {
+    display: none;
+}
+
+#project-list.show, #complete-project-list.show,
+#project-list-mobile.show, #complete-project-list-mobile.show {
     transform: scaleY(1);
     width: 100%;
     max-height: 800px;
@@ -262,7 +270,9 @@ height: 100vh;
 }
 
 #project-list.show:empty,
-#complete-project-list.show:empty {
+#project-list-mobile.show:empty,
+#complete-project-list.show:empty,
+#complete-project-list-mobile.show:empty {
     border: none;
     box-shadow: none;
     padding: 0;
@@ -318,10 +328,12 @@ height: 100vh;
 #project-container, h1 {
     display: flex;
     flex-wrap: wrap;
+    flex-shrink: 1;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
     width: 100%;
+    min-width: fit-content;
     margin-top: 20px;
     height: 5rem;
     gap: 1rem;
@@ -333,7 +345,7 @@ height: 100vh;
 .project-card {
     align-items: flex-start;
     flex: 1 2 50rem;
-    min-width: 12rem;
+    min-width: 8rem;
     height: auto;
     gap: 2em;
     padding: 2em;
@@ -533,7 +545,24 @@ height: 100vh;
     transform: rotate(0deg);
 }
 
+  .project-card {
+    flex: 1 1 100%;     
+    min-width: unset;   
+    max-width: 90%;     
+    margin: 0 auto;     
+    padding: 1rem;      
+  }
 
+  .todo button {
+    display: flex;
+    flex-wrap: wrap;
+    align-self: center;
+    flex-shrink: 0;
+    height: 2rem;
+    width: 2rem;
+    padding: 0.25rem 0.5rem;
+    border-radius: 5px;
+}
 
     
 }
